--- a/dada/templates/plugins/tracker/message_email_report_table.tmpl
+++ b/dada/templates/plugins/tracker/message_email_report_table.tmpl
@@ -32,15 +32,26 @@
 			<a class="modalbox"  href="<!-- tmpl_var Bounce_Handler_URL -->?prm=cgi_bounce_score_search&query=<!-- tmpl_var email escape="URL" -->&chrome=0" title="Bounce Log for <!-- tmpl_var email escape="HTML" -->" >
 		 	   <!-- tmpl_var email -->
 	    	</a>
-		<!-- tmpl_else --> 
-		<a href="#" class="message_individual_email_activity" data-email="<!-- tmpl_var email -->">
-			<!-- tmpl_if __first__  --> 
-				<span id="first_for_<!-- tmpl_var label -->"><!-- tmpl_var email --></span>
-			<!-- tmpl_else --> 
-				<!-- tmpl_var email -->
-			<!-- /tmpl_if --> 
-		</a> 
+			
+		<!-- tmpl_else -->
+	 		<!-- tmpl_if expr="(type eq 'abuse_report')" -->
+	 			<!-- tmpl_if __first__  --> 
+	 				<span id="first_for_<!-- tmpl_var label -->"><!-- tmpl_var email --></span>
+	 			<!-- tmpl_else --> 
+	 				<!-- tmpl_var email -->
+	 			<!-- /tmpl_if -->
+	 	   <!-- tmpl_else --> 
+	 			<a href="#" class="message_individual_email_activity" data-email="<!-- tmpl_var email -->">
+	 				<!-- tmpl_if __first__  --> 
+	 					<span id="first_for_<!-- tmpl_var label -->"><!-- tmpl_var email --></span>
+	 				<!-- tmpl_else --> 
+	 					<!-- tmpl_var email -->
+	 				<!-- /tmpl_if --> 
+	 			</a> 
+	 		<!-- /tmpl_if --> 
+		
 		<!-- /tmpl_if --> 
+		
 	  </td> 
 	
 		<!-- tmpl_if count --> 
