--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -2062,6 +2062,32 @@
 			</div> 
 		<!-- /tmpl_if --> 
 
+
+
+			<label for="configure_google_maps">
+				<input 
+					type="checkbox" 
+					name="configure_google_maps" 
+					id="configure_google_maps" 
+					value="1"
+					>			
+				Configure Google Maps
+			</label>
+
+			<div id="google_maps_options">
+				<div class="panel">
+					<label  for="google_maps_api_key">
+						Google Maps API Key
+					</label> 
+					<input
+						type="text"
+						name="google_maps_api_key"
+						id="google_maps_api_key"
+						value=""
+					>
+				</div> 
+			</div>
+
 		<!-- tmpl_if show_captcha_options --> 
 
 			<label for="configure_captcha">
