--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1212,6 +1212,54 @@
 			<!-- tmpl_include upgrade_to_pro_dada.tmpl --> 
 		<!-- /tmpl_if -->
 
+
+		<label for="configure_pii">
+			<input 
+				type="checkbox" 
+				name="configure_pii" 
+				id="configure_pii"
+				value="1"
+			>			
+				Configure Handling Personal Identifiable Information (PII)
+			</label>
+
+		<div id="pii_options">
+			<div class="panel">
+				
+				<label for="pii_options_allow_logging_emails_in_analytics">
+					<input 
+						type="checkbox" 
+						name="pii_options_allow_logging_emails_in_analytics" 
+						id="pii_options_allow_logging_emails_in_analytics" 
+						value="1"
+					>			
+						Allow email addresses to be logged for tracking/analytical purposes
+				</label>
+
+				<label for="pii_options_ip_address_logging_style_original">
+					<input 
+						type="radio" 
+						name="pii_options_ip_address_logging_style" 
+						id="pii_options_ip_address_logging_style_original" 
+						value="original"
+					>			
+						Log complete IP addresses
+				</label>
+
+				<label for="pii_options_ip_address_logging_style_original_anonymized">
+					<input 
+						type="radio" 
+						name="pii_options_ip_address_logging_style" 
+						id="pii_options_ip_address_logging_style_original_anonymized" 
+						value="anonymized"
+					>			
+						Log anonymized IP addresses
+				</label>
+				
+			</div>
+		</div>
+
+
 		<!-- tmpl_if show_scheduled_jobs_options --> 
 
 			<label for="configure_scheduled_jobs">
