--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1221,7 +1221,7 @@
 				id="configure_pii"
 				value="1"
 			>			
-				Configure Handling Personal Identifiable Information (PII)
+				Configure Handling Personally Identifiable Information (PII)
 			</label>
 
 		<div id="pii_options">
