An equal sign assigns value. Now onto page 2 of my, how to program book.

--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -300,7 +300,7 @@ $GOOGLE_MAPS_API_PARAMS = {
 #---------------------------------------------------------------------#
 # Personal Identifying Information
 
-$PII_OPTIONS { 
+$PII_OPTIONS = { 
 	allow_logging_emails_in_analytics => '<!-- tmpl_var pii_allow_logging_emails_in_analytics default="0" -->', 
 	ip_address_logging_style          => '<!-- tmpl_var pii_ip_address_logging_style default="anonymized" -->', 
 };
